Revert "chore(config): professionalize configuration management (#10)"
This reverts commit 611e616d03ee7366c7aa1106037b39f29465d863.

--- a/.gitignore
+++ b/.gitignore
@@ -277,14 +277,10 @@ cron/runs/*.log
 /.openclaw/
 
 # ---------------------------------------------------------------------------
-# OpenClaw Configuration - CONTAINS SECRETS
-# Main configuration file contains sensitive tokens and API keys
-openclaw.json
-!openclaw.json.example          # Keep example/template
-openclaw.json.bak
-openclaw.json.bak.*
-
-# Legacy backup files (may contain old secrets)
+# Legacy / Migration
+# ---------------------------------------------------------------------------
+# Old patterns kept temporarily during migration
+.zsh_sessions/
 
 
 # =============================================================================
